--- a/sigproc.bib
+++ b/sigproc.bib
@@ -68,7 +68,7 @@
 }
 
 @MISC{pycrypto,
-	AUTHOR = {{Dwayne Litzenberger}},
+	AUTHOR = {Litzenberger, Dwayne},
 	TITLE = {{PyCrypto - The Python Cryptography Toolkit}},
 	HOWPUBLISHED = {\url{https://www.dlitz.net/software/pycrypto/}},
 	NOTE = {Accessed: 2017-5-19}
@@ -115,4 +115,32 @@
 	TITLE = {{Synergy - Mouse and keyboard sharing software}},
 	HOWPUBLISHED = {\url{https://symless.com/synergy}},
 	NOTE = {Accessed: 2017-5-22}
+}
+
+@MISC{ndnMouseGH,
+	AUTHOR = {Minner, Wesley},
+	TITLE = {{ndnMouse - Github}},
+	HOWPUBLISHED = {\url{https://github.com/wminner/ndnMouse}},
+	NOTE = {Accessed: 2017-5-23}
+}
+
+@MISC{ndnMouseGP,
+	AUTHOR = {Minner, Wesley},
+	TITLE = {{ndnMouse - Google Play Store}},
+	HOWPUBLISHED = {\url{https://play.google.com/store/apps/details?id=edu.ucla.cs.ndnmouse}},
+	NOTE = {Accessed: 2017-5-23}
+}
+
+@MISC{twisted,
+	AUTHOR = {{Twisted Matrix Labs}},
+	TITLE = {{Twisted}},
+	HOWPUBLISHED = {\url{https://twistedmatrix.com/trac/}},
+	NOTE = {Accessed: 2017-5-23}
+}
+
+@MISC{nodejs,
+	AUTHOR = {{Node.js Foundation}},
+	TITLE = {{Node.js}},
+	HOWPUBLISHED = {\url{https://nodejs.org/en/about/}},
+	NOTE = {Accessed: 2017-5-23}
 }
