Update demo video link.

--- a/main.tex
+++ b/main.tex
@@ -276,7 +276,7 @@ NdnMouse still has room to grow and this reports shows there are plenty of poten
 
 % ==============================================================================
 \section{Appendix}
-Screenshots of the Android and PC applications follow. The Android app can be downloaded directly from the \href{https://play.google.com/store/apps/details?id=edu.ucla.cs.ndnmouse}{Google Play App Store}, and the PC client application can be downloaded from the \href{https://github.com/wminner/ndnMouse/tree/master/pc_client}{Github} repository. A demo of ndnMouse can be viewed here: \href{https://youtu.be/z1TiQffh5Mc}{https://youtu.be/z1TiQffh5Mc}
+Screenshots of the Android and PC applications follow. The Android app can be downloaded directly from the \href{https://play.google.com/store/apps/details?id=edu.ucla.cs.ndnmouse}{Google Play App Store}, and the PC client application can be downloaded from the \href{https://github.com/wminner/ndnMouse/tree/master/pc_client}{Github} repository. A demo of ndnMouse can be viewed here: \href{https://youtu.be/ZNNqTG2ha6s}{https://youtu.be/ZNNqTG2ha6s}
 
 \begin{figure}[hp]
 	\hypertarget{fig:start}{}
