--- a/sigproc.bib
+++ b/sigproc.bib
@@ -144,3 +144,47 @@
 	HOWPUBLISHED = {\url{https://nodejs.org/en/about/}},
 	NOTE = {Accessed: 2017-5-23}
 }
+
+@inproceedings{chronosync,
+	title={Let's chronosync: Decentralized dataset state synchronization in named data networking},
+	author={Zhu, Zhenkai and Afanasyev, Alexander},
+	booktitle={Network Protocols (ICNP), 2013 21st IEEE International Conference on},
+	pages={1--10},
+	year={2013},
+	organization={IEEE}
+}
+
+@MISC{justintaylor,
+	AUTHOR = {Taylor, Justin},
+	TITLE = {Android Desktop Remote Control},
+	HOWPUBLISHED = {\url{https://github.com/justin-taylor/Android-Desktop-Remote-Control}},
+	NOTE = {Accessed: 2017-5-26}
+}
+
+@MISC{mobilemouse,
+	AUTHOR = {Zhang, Lei},
+	TITLE = {Mobile Mouse},
+	HOWPUBLISHED = {\url{https://github.com/tuesda/mobilemouse}},
+	NOTE = {Accessed: 2017-5-26}
+}
+
+@MISC{remotemouse,
+	AUTHOR = {{Remote Mouse}},
+	TITLE = {Remote Mouse},
+	HOWPUBLISHED = {\url{https://play.google.com/store/apps/details?id=com.hungrybolo.remotemouseandroid}},
+	NOTE = {Accessed: 2017-5-26}
+}
+
+@MISC{wifimouse,
+	AUTHOR = {{WiFi Mouse}},
+	TITLE = {WiFi Mouse},
+	HOWPUBLISHED = {\url{https://play.google.com/store/apps/details?id=com.necta.wifimousefree}},
+	NOTE = {Accessed: 2017-5-26}
+}
+
+@MISC{wireshark,
+	AUTHOR = {{G. Combs et al.}},
+	TITLE = {Wireshark},
+	HOWPUBLISHED = {\url{https://www.wireshark.org/}},
+	NOTE = {Accessed: 2017-5-26}
+}
